@@ -1,12 +1,7 @@
 {
-  "count": 84,
-  "uniques": 19,
+  "count": 81,
+  "uniques": 18,
   "views": [
-    {
-      "timestamp": "2024-02-13T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-14T00:00:00Z",
       "count": 22,
